# DemoVcpkgLib

./: CMakeLists.txt  DemoAdd-config.cmake.in  demo_add.cpp  demo_add.h
